[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["Shogo Okajima <okajima-shohgo@comjo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Sphinx = "^4.4.0"
furo = "^2022.1.2"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"
black = "^21.12b0"
isort = "^5.10.1"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.8.8"
sphinxcontrib-actdiag = "^3.0.0"
sphinxcontrib-nwdiag = "^2.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-markdown-tables = "^0.0.15"
myst-parser = "^0.16.1"
sphinxcontrib-blockdiag = "^3.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 139

[tool.isort]
profile = "black"
line_length = 139

[tool.flake8]
max-line-length = 139
extend-ignore = "E203,"
max-complexity = 10
exclude = "tests/*"
